// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Targets /> should render null when [dataType!=barcode] 1`] = `""`;

exports[`<Targets /> should render when [canModify=false] 1`] = `
<Box__BoxGroup>
  <Targets__TargetsHeader>
    <h2>
      <span>
        Targets
      </span>
    </h2>
    <p>
      Manage the allowable sequence targets for this barcode reference.
    </p>
  </Targets__TargetsHeader>
  <TargetItem
    canModify={false}
    key="foo"
    name="foo"
    onEdit={[MockFunction]}
    onRemove={[Function]}
  />
</Box__BoxGroup>
`;

exports[`<Targets /> should render when [canModify=true] 1`] = `
<Box__BoxGroup>
  <Targets__TargetsHeader>
    <h2>
      <span>
        Targets
      </span>
      <Link
        to={
          Object {
            "state": Object {
              "addTarget": true,
            },
          }
        }
      >
        Add target
      </Link>
    </h2>
    <p>
      Manage the allowable sequence targets for this barcode reference.
    </p>
  </Targets__TargetsHeader>
  <TargetItem
    canModify={true}
    key="foo"
    name="foo"
    onEdit={[MockFunction]}
    onRemove={[Function]}
  />
  <Connect(AddTarget) />
  <Connect(EditTarget) />
</Box__BoxGroup>
`;
